1.0.0 / 2010-01-22
------

* 1 major enhancement
  * Birthday!

2.0.0 / 2010-01-29
----

* Added issuer verification to artifact resolution to protect against
  spoofing.
* Removed attempt to load config file from non-existent directory for
  Rails apps.